import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'@keyframes fade {} @keyframes slide {}',
		'@property --color {} @property --size {}',
		'@counter-style dots {} @counter-style stars {}',
		'@position-try --above {} @position-try --below {}',
		'@keyframes fade {} @keyframes Fade {}',
		String.raw`@keyframes \46 ade {} @keyframes fade {}`,
		'@property --color {} @property --Color {}',
		'@counter-style dots {} @counter-style Dots {}',
		'@position-try --above {} @position-try --Above {}',
		'@keyframes "fade" {} @keyframes "Fade" {}',
		// Visually identical names with different code points are distinct.
		'@keyframes café {} @keyframes cafe\u0301 {}',
		'@keyframes --shared {} @property --shared {} @counter-style --shared {} @position-try --shared {}',
		'@-webkit-keyframes fade {} @keyframes fade {} @-moz-keyframes fade {} @-o-keyframes fade {}',
		'@keyframes fade {} @media (width > 40rem) { @keyframes fade {} }',
		'@media (width > 40rem) { @keyframes fade {} } @media (width > 40rem) { @keyframes fade {} }',
		'@supports (display: grid) { @property --color {} } @supports (display: grid) { @property --color {} }',
		'@layer theme { @counter-style dots {} } @layer theme { @counter-style dots {} }',
		'@container card (width > 20rem) { @position-try --above {} } @container card (width > 20rem) { @position-try --above {} }',
		'@scope (.card) { @keyframes fade {} } @scope (.card) { @keyframes fade {} }',
		'.card { @keyframes fade {} } .card { @keyframes fade {} }',
		'@layer theme {} @layer theme {} @layer theme;',
		'@font-face { font-family: Example; } @font-face { font-family: Example; }',
		'@font-palette-values --palette {} @font-palette-values --palette {}',
		'@unknown example {} @unknown example {}',
		'@keyframes fade; @keyframes fade {}',
		'@property --color; @property --color {}',
		'@keyframes fade slide {} @keyframes fade slide {}',
		'@counter-style "dots" {} @counter-style "dots" {}',
		'@property "--color" {} @property "--color" {}',
		'@position-try "--above" {} @position-try "--above" {}',
		// Comma-separated registrations use the same case-sensitive names and parent boundary.
		'@property --color, --size {} @property --Color, --Size {}',
		'@property --color, --size {} @property --width, --height {}',
		'@supports (display: grid) { @property --color, --size {} } @supports (display: grid) { @property --color, --size {} }',
		'@property --color, --size; @property --color {} @property --size {}',
		'@property --color, --size {} @keyframes --color {}',
		// Malformed name lists are ignored entirely.
		'@property --color, {} @property --color {}',
		'@property , --color {} @property --color {}',
		'@property --color,, --size {} @property --color {} @property --size {}',
		'@property --color --size {} @property --color {} @property --size {}',
		'@property --color / --size {} @property --color {} @property --size {}',
		'@property "--color", --size {} @property --size {}',
		'@property --color, var(--size) {} @property --color {}',
		'@keyframes fade, slide {} @keyframes fade, slide {}',
		'@counter-style dots, stars {} @counter-style dots, stars {}',
		'@position-try --above, --below {} @position-try --above, --below {}',
		// Predefined styles with different names remain independent.
		'@counter-style LOWER-ALPHA {} @counter-style LOWER-LATIN {}',
		'@counter-style CJK-IDEOGRAPHIC {} @counter-style TRAD-CHINESE-INFORMAL {}',
		'@counter-style upper-roman-custom {} @counter-style UPPER-ROMAN-CUSTOM {}',
		'@counter-style KHMER {} @counter-style khmer {}',
		String.raw`@counter-style \5c 75PPER-ROMAN {} @counter-style upper-roman {}`,
		'@keyframes upper-roman {} @keyframes UPPER-ROMAN {}',
		'@layer theme { @counter-style upper-roman {} } @layer theme { @counter-style UPPER-ROMAN {} }',
		'a { --definition: "@keyframes fade {} @keyframes fade {}"; background: url("@keyframes fade {}"); }',
		'@keyframes fade-out {} @keyframes fade {}',
		'@media (width > 40rem) { @-webkit-keyframes fade {} @keyframes fade {} }',
		'@property --color {}\n/* eslint-disable-next-line rule-to-test/no-duplicate-at-rule-definitions */\n@property --color {}',
		{
			code: '@keyframes f|ade {} @keyframes f|ade {}',
			languageOptions: {tolerant: true},
		},
	],
	invalid: [
		'@keyframes fade { from { opacity: 0; } } @keyframes fade { to { opacity: 1; } }',
		'@property --color { syntax: "<color>"; inherits: false; initial-value: red; } @property --color { syntax: "<color>"; inherits: false; initial-value: blue; }',
		'@counter-style dots { system: cyclic; symbols: "•"; } @counter-style dots { system: cyclic; symbols: "*"; }',
		'@position-try --above { top: 0; } @position-try --above { bottom: 0; }',
		'@keyframes fade {} a { color: red; } @keyframes slide {} @keyframes fade {}',
		'@keyframes fade {}\n@keyframes fade {}\n@keyframes fade {}',
		'@KEYFRAMES fade {} @keyframes fade {}',
		'@PROPERTY --color {} @property --color {}',
		'@COUNTER-STYLE dots {} @counter-style dots {}',
		'@POSITION-TRY --above {} @position-try --above {}',
		String.raw`@\6b eyframes fade {} @keyframes fade {}`,
		String.raw`@\70 roperty --color {} @property --color {}`,
		String.raw`@counter-style do\74 s {} @counter-style dots {}`,
		String.raw`@property --c\6f lor {} @property --color {}`,
		String.raw`@position-try --a\62 ove {} @position-try --above {}`,
		String.raw`@keyframes f\61 de {} @keyframes fade {}`,
		'@keyframes "fade" {} @keyframes fade {}',
		String.raw`@keyframes fade {} @keyframes "f\61 de" {}`,
		'@keyframes \'fade\' {} @keyframes "fade" {}',
		'@keyframes "" {} @keyframes "" {}',
		'@keyframes "none" {} @keyframes "none" {}',
		'@-webkit-keyframes fade {} @-WEBKIT-KEYFRAMES fade {}',
		'@-moz-keyframes fade {} @-moz-keyframes fade {}',
		'@-o-keyframes fade {} @-o-keyframes fade {}',
		'@-webkit-keyframes fade {} @keyframes fade {} @keyframes fade {}',
		'@media (width > 40rem) { @keyframes fade {} @keyframes fade {} }',
		'@supports (display: grid) { @property --color {} @property --color {} }',
		'@container card (width > 20rem) { @position-try --above {} @position-try --above {} }',
		'@layer theme { @counter-style dots {} @counter-style dots {} }',
		'@scope (.card) { @keyframes fade {} @keyframes fade {} }',
		'.card { @media (width > 40rem) { @keyframes fade {} @keyframes fade {} } }',
		'@keyframes fade /* first */ {} /* keep */ @keyframes /* second */ fade {}',
		'@media (width > 40rem) {\r\n  @keyframes fade {}\r\n  /* keep */ @keyframes "fade" {}\r\n}',
		// Body validity and intentional registration fallbacks do not affect detection.
		'@property --color {} @property --color { syntax: "<color>"; inherits: false; initial-value: red; }',
		'@property --color { syntax: "<color>"; inherits: false; initial-value: red; } @property --color { syntax: "<color>"; inherits: false; initial-value: future-color(red); }',
		String.raw`@-w\65 bkit-keyframes fade {} @-webkit-keyframes fade {}`,
		'@property --color, --size {} @property --color {}',
		'@property --color {} @property --size, --color {}',
		'@property --color, --size {} @property --size, --color {}',
		'@property --color, --color {}',
		'@property --color, --color, --color {}',
		'@property --color, --size {} @property --color, --size {} @property --color {}',
		String.raw`@\70 roperty --c\6f lor, --size {} @PROPERTY --color {}`,
		'@media (width > 40rem) { @property --color, --size {} @property --size {} }',
		'@counter-style upper-roman {} @counter-style UPPER-ROMAN {}',
		'@counter-style LOWER-LATIN {} @counter-style lower-latin {}',
		'@counter-style cjk-earthly-branch {} @counter-style CJK-EARTHLY-BRANCH {}',
		'@COUNTER-STYLE JAPANESE-FORMAL {} @counter-style japanese-formal {}',
		'@counter-style ETHIOPIC-NUMERIC {} @counter-style ethiopic-numeric {}',
		'@counter-style cjk-ideographic {} @counter-style CJK-IDEOGRAPHIC {}',
		'@counter-style decimal {} @counter-style DECIMAL {}',
		String.raw`@counter-style \75 pper-roman {} @counter-style UPPER-ROMAN {}`,
		'@media (width > 40rem) { @counter-style upper-roman {} @counter-style UPPER-ROMAN {} }',
		'a { @keyframes fade {} @keyframes fade {} }',
		'@keyframes fade {} @keyframes fade-out {} @keyframes fade {}',
		'@keyframes none {} @keyframes "none" {}',
		'@property --color, /* keep */ --size {} @property --size {}',
	],
});

test({
	valid: [],
	invalid: [
		{
			code: '@counter-style upper-roman {}\r\n/* keep */ @counter-style UPPER-ROMAN {}\r\n@counter-style UpPeR-RoMaN {}',
			errors: [
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'counter-style', name: 'UPPER-ROMAN', line: '1'},
					line: 2,
					column: 27,
					endLine: 2,
					endColumn: 38,
					suggestions: [],
				},
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'counter-style', name: 'UpPeR-RoMaN', line: '1'},
					line: 3,
					column: 16,
					endLine: 3,
					endColumn: 27,
					suggestions: [],
				},
			],
		},
		{
			code: '@property --color,\r\n  --size {}\r\n/* keep */ @property --size, --color {}',
			errors: [
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'property', name: '--size', line: '2'},
					line: 3,
					column: 22,
					endLine: 3,
					endColumn: 28,
					suggestions: [],
				},
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'property', name: '--color', line: '1'},
					line: 3,
					column: 30,
					endLine: 3,
					endColumn: 37,
					suggestions: [],
				},
			],
		},
		{
			code: '@keyframes fade {}\r\n/* keep */ @keyframes "fade" {}\r\n@keyframes fade {}',
			errors: [
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'keyframes', name: 'fade', line: '1'},
					line: 2,
					column: 23,
					endLine: 2,
					endColumn: 29,
					suggestions: [],
				},
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'keyframes', name: 'fade', line: '1'},
					line: 3,
					column: 12,
					endLine: 3,
					endColumn: 16,
					suggestions: [],
				},
			],
		},
		{
			code: '@keyframes fade {}\n@-webkit-keyframes fade {}\n@media (width > 40rem) {\n  @keyframes fade {}\n  @keyframes fade {}\n}\n@keyframes fade {}\n@-webkit-keyframes fade {}',
			errors: [
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'keyframes', name: 'fade', line: '4'},
					line: 5,
				},
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: 'keyframes', name: 'fade', line: '1'},
					line: 7,
				},
				{
					messageId: 'no-duplicate-at-rule-definitions',
					data: {atRule: '-webkit-keyframes', name: 'fade', line: '2'},
					line: 8,
				},
			],
		},
		{
			code: '@keyframes "fa\\\nde" {}\n@keyframes fade {}',
			errors: [{
				messageId: 'no-duplicate-at-rule-definitions',
				data: {atRule: 'keyframes', name: 'fade', line: '1'},
				line: 3,
				column: 12,
				endLine: 3,
				endColumn: 16,
				suggestions: [],
			}],
		},
		{
			code: String.raw`@keyframes "line\a \1b [31m" {} @keyframes "line\a \1b [31m" {}`,
			errors: [{
				message: 'Duplicate `@keyframes` definition `line\\n\\u001b[31m`. The first definition is on line 1.',
				suggestions: [],
			}],
		},
	],
});
